--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>homepage</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-                <!-- GOOGLE SEARCH -->
-                <form action="https://google.com/search" method="get" target="_blank">
-                    <input type="hidden" name="sitesearch" />
-                    <input type="text" name="q" placeholder="Search with Google" class="search-bar"/>
-                </form>
-                
-        <script src="MyScripts.js" async defer></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>homepage</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!--[if lt IE 7]>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+    <!-- GOOGLE SEARCH -->
+    <h1>googol</h1>
+    <form action="https://google.com/search" method="get" target="_blank">
+        <input type="hidden" name="sitesearch" />
+        <input type="text" name="q" placeholder="Search with Google" class="search-bar"/>
+    </form>
+    <section class="bookmarks">
+        <a href="https://mail.google.com" target="_blank">
+            <img src="gmail.png" alt="Gmail" />
+            <p>Gmail</p>
+        </a>
+    </section>
+    <script src="MyScripts.js" async defer></script>
+</body>
 </html>
