--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
         <input type="hidden" name="sitesearch" />
         <input type="text" name="q" placeholder="Search with Google" class="search-bar"/>
     </form>
-    <section class="bookmarks">
-        <a href="https://mail.google.com" target="_blank">
-            <img src="gmail.png" alt="Gmail" />
-            <p>Gmail</p>
-        </a>
-    </section>
     <script src="MyScripts.js" async defer></script>
+    <div class="BookmarkContainer">
+        <a class="BookmarkButton" href="https://mail.google.com">
+            <div class="ButtonBackground"></div>
+            <div class="ButtonImageContainer">
+                <img src="gmail.png">
+            </div>
+            <p class="ButtonText">Gmail</p>
+        </a>
+    </div>    
 </body>
 </html>
