--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <![endif]-->
     <!-- GOOGLE SEARCH -->
     <h1>googol</h1>
-    <form action="https://google.com/search" method="get" target="_blank">
+    <form action="https://google.com/search" method="get">
         <input type="hidden" name="sitesearch" />
         <input type="text" name="q" placeholder="Search with Google" class="search-bar"/>
-    </form>
+    </form>    
     <script src="MyScripts.js" async defer></script>
     <div class="BookmarkContainer">
         <a class="BookmarkButton" href="https://mail.google.com">
